--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,14 @@
 .nav{
     grid-area: n;
     background-color: cyan;
+    padding: 20px;
 }
 
-.item {
+.item a {
     color: white;
+    text-decoration: none;
 }
 
-.item.active {
-    color: red;
+.item a.activeLink {
+    color: gold;
 }
